# marvelous-databricks-course-melaniekirstein

./: .gitignore  databricks.yml  main.py  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
hotel_reservations/: config.py  data_processor.py  reservation_model.py
notebooks/: hotel_reservations-0.0.1-py3-none-any.whl  week_1.prettier_notebook.py  week_1.pretty_notebook.py  week_1.ugly_notebook.py
notebooks/week_2/: 01.prepare_dataset.py  02.mlflow_experiment.py  03.log_and_register_model.py  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py
notebooks/week_3/: 01.feature_serving.py  02.model_serving.py  03.model_serving_feature_lookup.py  04.AB_test_model_serving.py  README.md
notebooks/week_5/: 00.create_source_data.py
src/hotel_reservations/: data_processor.py  reservation_model.py  utils.py
tests/: test_data_processor.py
