[project]
name = "hotel_reservations"
version = "0.0.2"
description = "MLOps with Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.5.0, <5",
    "scikit-learn>=1.5.1, <2",
    "cloudpickle==3.1.0",
    "mlflow==2.17.0",
    "numpy==1.23.5",  # Downgraded to meet ydata-profiling requirement
    "pandas<2.1",  # Downgraded to meet ydata-profiling requirement
    "psutil==6.0.0",
    "pyarrow==14.0.1",
    "cffi>=1.17.1, <2",
    "scipy<1.12",  # Downgraded to meet ydata-profiling requirement
    "matplotlib>=3.9.2, <4",
    "seaborn>=0.12.0",
    "pre-commit>=4.0.1",
    "databricks-feature-engineering>=0.6, <1",
    "databricks-sdk>=0.32.0, <0.33",
    "pydantic<2"  # Downgraded to meet ydata-profiling requirement
                ]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.1, <16",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
ignore = ["E501", "F401"]
select = ["E", "F"]

[tool.setuptools]
packages = ["hotel_reservations"]

[tool.setuptools.package-data]
hotel_reservations = ["**/*.py"]
